# insighta-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: api.rs  cli.rs  config.rs  display.rs  main.rs  oauth.rs
src/commands/: auth.rs  mod.rs  profiles.rs
src/templates/: error.html  success.html
